--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ img.emoji {
 		
 
 <p><b><span style="font-size: 130%;">Are you 18+ or over?</span></b></p>
-<p>You need to be 18 or older to access Tiktok 18+.</p>
+<p>You need to be 18 or older to Download Tiktok 18+.</p>
 		
 <style>#text-1626984644 {
   font-size: 1rem;
